[tool.poetry]
name = "tarnbyveien-nyheter"
version = "0.1.0"
description = "Extract news about tarnbyveien housing association"
authors = ["Luigi Maglanoc"]
readme = "README.md"
packages = [{include = "tarnbyveien_nyheter"}]

[tool.poetry.dependencies]
python = "~3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
