[tool.poetry]
name = "tarnbyveien-nyheter"
version = "0.1.0"
description = "Extract news about tarnbyveien housing association"
authors = ["Luigi Maglanoc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
urlopen = "^1.0.0"
beautifulsoup4 = "^4.12.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
